--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <!-- reset css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
 
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/bf10c4ec2a.js" crossorigin="anonymous"></script>
 </head>
@@ -21,12 +26,24 @@
   <nav class="navbar">
 
     <div class="navbar_logo">
+      <!-- font awesome icon -->
       <i class="fa-brands fa-accusoft"></i>
       <a href="">DreamCoding</a>
     </div>
 
-    <div class="navbar_menu"></div>
-    <div class="navbar_links"></div>
+    <ul class="navbar_menu">
+      <li><a href="">Home</a></li>
+      <li><a href="">Gallery</a></li>
+      <li><a href="">Weddings</a></li>
+      <li><a href="">FAQ</a></li>
+      <li><a href="">Bookings</a></li>
+    </ul>
+
+    <ul class="navbar_icons">
+      <li><i class="fa-brands fa-twitter"></i></li>
+      <li><i class="fa-brands fa-facebook-f"></i></li>
+    </ul>
+
   </nav>
 
 </body>
