헤더 1차 완성

--- a/index.html
+++ b/index.html
@@ -5,47 +5,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- link main.css -->
-  <link rel="stylesheet" href="./main.css">
-  <title>Nav bar</title>
+  <title>Responsive Nav Bar</title>
 
-  <!-- reset css -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  <!-- reset css cdn -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
 
-  <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-
-  <!-- font awesome -->
+  <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/bf10c4ec2a.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="./main.css" />
 </head>
 
 <body>
-
   <nav class="navbar">
-
     <div class="navbar_logo">
-      <!-- font awesome icon -->
       <i class="fa-brands fa-accusoft"></i>
       <a href="">DreamCoding</a>
     </div>
 
-    <ul class="navbar_menu">
-      <li><a href="">Home</a></li>
-      <li><a href="">Gallery</a></li>
-      <li><a href="">Weddings</a></li>
-      <li><a href="">FAQ</a></li>
-      <li><a href="">Bookings</a></li>
-    </ul>
+    <div class="navbar_menu">
+      <ul>
+        <li>Home</li>
+        <li>Gallery</li>
+        <li>Weddings</li>
+        <li>FAQ</li>
+        <li>Bookings</li>
+      </ul>
+    </div>
 
-    <ul class="navbar_icons">
-      <li><i class="fa-brands fa-twitter"></i></li>
-      <li><i class="fa-brands fa-facebook-f"></i></li>
-    </ul>
-
+    <div class="navbar_icons">
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-facebook-f"></i>
+    </div>
   </nav>
-
 </body>
 
 </html>
